[gd_scene load_steps=8 format=3 uid="uid://b8drbos167vf8"]

[ext_resource type="Script" uid="uid://cggw6eoflyj02" path="res://Player/Head.gd" id="1_enjfg"]
[ext_resource type="PackedScene" uid="uid://cj7ljt6wp3po5" path="res://weapons/medieval_sword.glb" id="2_irtxf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_irtxf"]
radius = 0.00494048
height = 0.058717

[sub_resource type="Animation" id="Animation_oowo0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/WeaponPivot/WeaponMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_adwmk"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/WeaponPivot/WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.28966, -0.00795639, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/WeaponPivot/WeaponMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.41375)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/WeaponPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2.06485, 0)]
}

[sub_resource type="Animation" id="Animation_irtxf"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.51329),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.270827, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/WeaponPivot/WeaponMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.51329),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.157499)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3wvon"]
_data = {
&"RESET": SubResource("Animation_oowo0"),
&"attack": SubResource("Animation_adwmk"),
&"idle": SubResource("Animation_irtxf")
}

[node name="Head" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.64, 0)
script = ExtResource("1_enjfg")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.523198, 0)
current = true

[node name="GrappleRaycast" type="RayCast3D" parent="Camera"]
target_position = Vector3(0, 0, -100)

[node name="WeaponPivot" type="Node3D" parent="Camera"]

[node name="WeaponMesh" type="MeshInstance3D" parent="Camera/WeaponPivot"]

[node name="Sketchfab_Scene" parent="Camera/WeaponPivot/WeaponMesh" instance=ExtResource("2_irtxf")]
transform = Transform3D(0.0564248, 0.952827, 0.298225, -0.998251, 0.0591147, -5.55375e-09, -0.0176295, -0.297703, 0.954496, 0.534516, -0.194652, -0.922302)

[node name="Hitbox" type="Area3D" parent="Camera/WeaponPivot/WeaponMesh/Sketchfab_Scene"]
transform = Transform3D(196.878, 2.23517e-08, 7.45058e-09, -3.8147e-06, 1.44494, -5.96046e-07, 0, -8.9407e-08, 6.16655, 0, 0, 0)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera/WeaponPivot/WeaponMesh/Sketchfab_Scene/Hitbox"]
shape = SubResource("CapsuleShape3D_irtxf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3wvon")
}
autoplay = "idle"
playback_default_blend_time = 0.2

[connection signal="area_entered" from="Camera/WeaponPivot/WeaponMesh/Sketchfab_Scene/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
